--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.dubsmash.volley:library:2.0.1'
+    implementation 'com.android.support:design:27.0.0'
 }
